--- a/index.html
+++ b/index.html
@@ -353,35 +353,35 @@
   <script src="https://cdn.jsdelivr.net/npm/protomaps-leaflet@2/dist/protomaps-leaflet.js"></script>
   
   <!-- Core -->
-  <script src="src/core/utils.js"></script>
-  <script src="src/core/state.js"></script>
+  <script src="src/shared/core/utils.js"></script>
+  <script src="src/shared/core/state.js"></script>
   <script src="src/core/config.js"></script>
-  <script src="src/core/events.js"></script>
+  <script src="src/shared/core/events.js"></script>
   
   <!-- Domain -->
-  <script src="src/domain/geo.js"></script>
-  <script src="src/domain/api.js"></script>
-  <script src="src/domain/distribution.js"></script>
+  <script src="src/shared/domain/geo.js"></script>
+  <script src="src/shared/domain/api.js"></script>
+  <script src="src/shared/domain/distribution.js"></script>
   
   <!-- Services -->
   <script src="src/services/aggregation-service.js"></script>
   <script src="src/services/target-service.js"></script>
-  <script src="src/services/route-service.js"></script>
-  <script src="src/services/isochrone-service.js"></script>
-  <script src="src/services/population-service.js"></script>
+  <script src="src/features/routing/route-service.js"></script>
+  <script src="src/features/isochrones/isochrone-service.js"></script>
+  <script src="src/features/population/population-service.js"></script>
   <script src="src/services/export-service.js"></script>
-  <script src="src/services/overpass-service.js"></script>
+  <script src="src/features/pois/overpass-service.js"></script>
   
   <!-- Visualization -->
   <script src="src/visualization/colormap-utils.js"></script>
   <script src="src/visualization/histogram-renderer.js"></script>
   <script src="src/visualization/marker-manager.js"></script>
-  <script src="src/visualization/poi-renderer.js"></script>
+  <script src="src/features/pois/poi-renderer.js"></script>
   <script src="src/visualization/visualization.js"></script>
   <script src="src/visualization/map-renderer.js"></script>
-  <script src="src/visualization/route-renderer.js"></script>
-  <script src="src/visualization/isochrone-renderer.js"></script>
-  <script src="src/visualization/overlap-renderer.js"></script>
+  <script src="src/features/routing/route-renderer.js"></script>
+  <script src="src/features/isochrones/isochrone-renderer.js"></script>
+  <script src="src/features/isochrones/overlap-renderer.js"></script>
   
   <!-- Utils -->
   <script src="src/utils/geocoder.js"></script>
@@ -392,10 +392,10 @@
   <script src="src/ui/config-helpers.js"></script>
   <script src="src/ui/distribution-selector.js"></script>
   <script src="src/ui/colormap-selector.js"></script>
-  <script src="src/ui/route-warning.js"></script>
+  <script src="src/features/routing/route-warning.js"></script>
   
   <!-- Handlers -->
-  <script src="src/handlers/route-handler.js"></script>
+  <script src="src/features/routing/route-handler.js"></script>
   
   <!-- App -->
   <script src="src/app.js"></script>
