--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div id="no-target-hint" class="panel-hint panel-hint--no-target" role="status" aria-live="polite">
         <p class="panel-hint-main">
-          <strong>Startpunkt für Isochrone setzen</strong> Klick in die Karte → Es wird eine Erreichbarkeits-Isochrone vom GraphHopper-Server berechnet.
+          <strong>Startpunkt für Isochrone setzen</strong> Klick in die Karte → Es wird eine Erreichbarkeits-Isochrone für das gewählte Profil berechnet.
         </p>
         <p class="panel-hint-secondary">
           Im Rechtsklick-Menü: Cafés, Restaurants oder Bars/Kneipen suchen.
@@ -120,6 +120,17 @@
               <path d="M16 14.75C16.8284 14.75 17.5 14.0784 17.5 13.25C17.5 12.4216 16.8284 11.75 16 11.75C15.1716 11.75 14.5 12.4216 14.5 13.25C14.5 14.0784 15.1716 14.75 16 14.75Z"></path>
             </svg>
           </button>
+          <button id="profile-transit" class="profile-btn" data-profile="transit" title="ÖPNV (Transitous)">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round">
+              <rect x="5" y="3" width="14" height="14" rx="2" ry="2"></rect>
+              <path d="M8 7h8"></path>
+              <path d="M8 10h8"></path>
+              <path d="M7 17l-1.5 3"></path>
+              <path d="M17 17l1.5 3"></path>
+              <circle cx="9" cy="14" r="1"></circle>
+              <circle cx="15" cy="14" r="1"></circle>
+            </svg>
+          </button>
         </div>
         </div>
       </section>
@@ -173,7 +184,7 @@
       <div class="github-links">
         <img src="https://img.shields.io/badge/Status-Experimental-red" alt="Status: Experimental" class="status-badge">
         <div style="flex: 1;"></div>
-        <a href="https://github.com/vizsim/miso target="_blank" rel="noopener noreferrer" 
+        <a href="https://github.com/vizsim/miso" target="_blank" rel="noopener noreferrer" 
            title="GitHub Repository" 
            class="github-link">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
@@ -335,6 +346,17 @@
                 <path d="M16 14.75C16.8284 14.75 17.5 14.0784 17.5 13.25C17.5 12.4216 16.8284 11.75 16 11.75C15.1716 11.75 14.5 12.4216 14.5 13.25C14.5 14.0784 15.1716 14.75 16 14.75Z"></path>
               </svg>
             </button>
+            <button type="button" class="profile-btn edit-profile-btn" data-profile="transit" title="ÖPNV (Transitous)">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="5" y="3" width="14" height="14" rx="2" ry="2"></rect>
+                <path d="M8 7h8"></path>
+                <path d="M8 10h8"></path>
+                <path d="M7 17l-1.5 3"></path>
+                <path d="M17 17l1.5 3"></path>
+                <circle cx="9" cy="14" r="1"></circle>
+                <circle cx="15" cy="14" r="1"></circle>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
@@ -367,6 +389,7 @@
   <script src="src/services/target-service.js"></script>
   <script src="src/features/routing/route-service.js"></script>
   <script src="src/features/isochrones/isochrone-service.js"></script>
+  <script src="src/features/isochrones/isochrone-params.js"></script>
   <script src="src/features/population/population-service.js"></script>
   <script src="src/services/export-service.js"></script>
   <script src="src/features/pois/overpass-service.js"></script>
@@ -383,12 +406,14 @@
   <script src="src/features/isochrones/overlap-renderer.js"></script>
   
   <!-- Utils -->
+  <script src="src/utils/async-helpers.js"></script>
   <script src="src/utils/geocoder.js"></script>
   
   <!-- UI -->
   <script src="src/ui/targets-list.js"></script>
   <script src="src/ui/saved-isochrones-list.js"></script>
   <script src="src/ui/config-helpers.js"></script>
+  <script src="src/ui/config-setup-handlers.js"></script>
   <script src="src/ui/distribution-selector.js"></script>
   <script src="src/ui/colormap-selector.js"></script>
   <script src="src/features/routing/route-warning.js"></script>
