final cleanup before push

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
   
   <!-- Handlers -->
   <script src="src/features/routing/route-handler.js"></script>
+  <script src="src/features/isochrones/overlap-controller.js"></script>
   
   <!-- App -->
   <script src="src/app.js"></script>
